--- a/Server/Server.dproj
+++ b/Server/Server.dproj
@@ -6,7 +6,7 @@
         <MainSource>Server.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
-        <Platform Condition="'$(Platform)'==''">Android</Platform>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>32785</TargetedPlatforms>
         <AppType>Application</AppType>
     </PropertyGroup>
